--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -4,6 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
+        <TextView android:id="@+id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center"/>
+        <TextView android:id="@+id/location" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center" />
+        <TextView android:id="@+id/lastUpdate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_gravity="center" />
+    </LinearLayout>
+
+
     <LinearLayout
             android:layout_margin="5dp"
             android:layout_width="fill_parent"
@@ -18,9 +25,4 @@
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
     </LinearLayout>
-    <Button android:id="@+id/connectButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Connect"
-            android:layout_gravity="center"/>
 </LinearLayout>
